--- a/src/lib/styles/card.scss
+++ b/src/lib/styles/card.scss
@@ -1,9 +1,10 @@
 .card {
     display: block;
     position: absolute;
-    width: 100%;
+    width: var(--cardWidth);
     aspect-ratio: 3.5/2.5;
     transition: 0.5s all ease-in-out;
+    transition-delay: var(--delay);
     transform-style: preserve-3d;
     transform: 
         translate3d(calc(var(--x) * 1px), calc(var(--y) * 1px), calc(var(--z) * 1px))
