Stop card edges from loading before cards

--- a/src/lib/styles/card.scss
+++ b/src/lib/styles/card.scss
@@ -46,6 +46,7 @@
         top: 0;
         width: 100%;
         height: 100%;
+        background-color: #A12596;
         background-image:url('/images/back-pattern1.svg');
         border-radius: 0.5rem;
         background-size: auto 56%;
