--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -56,6 +56,8 @@
             .drawpile {
                 position:relative;
                 transform-style: preserve-3d;
+                top: 100px;
+                left: 5px;
             }
         }
 
