--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -7,7 +7,7 @@
     background-color: #4e4b46;
     color: #fff;
     padding: 2rem;
-    perspective: 12in;
+    perspective: 24in;
 
     h1 {
         color: #fff;
@@ -47,7 +47,7 @@
             "playerarea playerarea";
         gap: 1rem;
         transform-origin: center bottom;
-        transform: rotateX(40deg);
+        transform: rotateX(45deg);
         transform-style: preserve-3d;
 
         .drawarea {
@@ -100,14 +100,27 @@
                 background-color: #f08;
                 width: 100%;
 
-                .letter {
-                    display: inline-block;
-                    background-color: #4a4a4a;
-                    aspect-ratio: 1;
-                    padding: 0.5rem;
+                .key {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
                     text-align: center;
-                    font-weight: bold;
-                    font-size: 2rem;
+                    width: 3rem;
+                    background-color: #eee;
+                    color: #4a4a4a;
+
+                    .letter {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 2.5rem;
+                        height: 2.5rem;
+                        background-color: #4a4a4a;
+                        color: #fff;
+                        font-size: 2em;
+                        border-radius: 0.25rem;
+                    }
                 }
 
                 .cardpile {
