Editable names, horizontal player card piles

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -100,6 +100,10 @@
                 background-color: #f08;
                 width: 100%;
 
+                .name {
+                    font-size: 1.5rem;
+                }
+
                 .key {
                     display: flex;
                     flex-direction: column;
@@ -109,6 +113,7 @@
                     width: 3rem;
                     background-color: #eee;
                     color: #4a4a4a;
+                    padding-bottom:0.5rem;
 
                     .letter {
                         display: flex;
@@ -127,9 +132,9 @@
                     position:relative;
                     top: 0;
                     left: 0;
-                    height: var(--cardWidth);
-                    width: auto;
-                    aspect-ratio: 2.5/3.5;
+                    width: var(--cardWidth);
+                    height: auto;
+                    aspect-ratio: 3.5/2.5;
                     background-color: rgba(255,255,255,0.1);
                     border-radius: 0.5rem;
                 }
