Set up top debug area to see card locations

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -162,6 +162,18 @@
     }
 }
 
+details.debug {
+    background-color: #c9b7c7;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin-bottom:1rem;
+
+    .cardcolumns {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 
 .card {
     display: block;
