--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -59,14 +59,26 @@
         transform-style: preserve-3d;
         margin-top: -15%; // to account for the rotation
 
+        .displaycards {
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
         .drawarea {
             grid-area: drawarea;
             transform-style: preserve-3d;
+
             .drawpile {
                 position:relative;
                 transform-style: preserve-3d;
-                top: 100px;
-                left: 5px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: #000;
+                width: auto;
+                height: var(--cardWidth);
+                aspect-ratio: 2.5/3.5;
             }
         }
 
