--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -63,6 +63,7 @@
             position: absolute;
             left: 0;
             top: 0;
+            transform-style: preserve-3d;
         }
 
         .drawarea {
@@ -76,9 +77,9 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
                 background-color: #000;
-                width: auto;
-                height: var(--cardWidth);
-                aspect-ratio: 2.5/3.5;
+                width: var(--cardWidth);
+                height: auto;
+                aspect-ratio: 3.5/2.5;
             }
         }
 
@@ -196,6 +197,7 @@ details.debug {
     transition-delay: calc(var(--delay) * 100ms);
     transform-style: preserve-3d;
     transform: 
+        translate(-50%, -50%) // Position based on center of the card
         translate3d(calc(var(--x) * 1px), calc(var(--y) * 1px), calc(var(--i) * 1.5px))
         rotateX(calc(var(--rotX) * 1deg)) rotateY(calc(var(--rotY) * 1deg)) rotateZ(calc(var(--rotZ) * 1deg)) ;
     perspective: 1000px;
