Fix cardChecker and make it prettier

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -47,6 +47,47 @@
         padding: 0;
     }
 
+    .cardchecker {
+        background-color: #000;
+        padding: 1rem;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 10;
+        border-radius: 0.5rem;
+
+        .cards {
+            display: flex;
+            gap: 0.5rem;
+
+            .card {
+                position: relative;
+                width: 50px;
+                pointer-events: auto;
+            }
+        }
+
+        .message {
+            li {
+                padding-left: 0.5rem;
+                text-transform: uppercase;
+
+                &::marker {
+                    content: "✅";
+                }
+
+                &.noset {
+                    &::marker {
+                        content: "❌";
+                    }
+                
+                }
+            }
+        }
+
+        
+    }
+
     .cardtable {
         display: grid;
         grid-template-columns: 1fr 4fr;
@@ -192,7 +233,7 @@ details.debug {
     position: absolute;
     width: var(--cardWidth);
     aspect-ratio: 3.5/2.5;
-    transition: 0.5s all ease-in-out;
+    transition: 0.5s all ease-in;
     transition-delay: calc(var(--delay) * 150ms);
     transform-style: preserve-3d;
     transform: 
