--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -47,6 +47,18 @@
         padding: 0;
     }
 
+    .currentplayer {
+        position: absolute;
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+        background-color: #000;
+        color: #fff;
+        font-size: 2rem;
+        padding: 1rem;
+        border-radius: 0 0 0.5rem 0.5rem;
+    }
+
     .cardchecker {
         background-color: #000;
         padding: 1rem;
@@ -224,6 +236,7 @@ details.debug {
     .cardcolumns {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        font-size: 0.8em;
     }
 }
 
@@ -262,6 +275,7 @@ details.debug {
         img {
             height: 65%;
             width: auto;
+            backface-visibility: hidden;
         }
     }
 
