--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -68,56 +68,52 @@
 
     .currentplayer {
         position: absolute;
-        left: 50%;
-        top: 0;
-        transform: translateX(-50%);
-        background-color: #000;
+        left: 2rem;
+        top: 8rem;
+        background-color: rgba(0,0,0,0.8);
         color: #fff;
         font-size: 2rem;
         padding: 1rem;
-        border-radius: 0 0 0.5rem 0.5rem;
-    }
-
-    .cardchecker {
-        background-color: #000;
-        padding: 1rem;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 10;
         border-radius: 0.5rem;
+        z-index: 10;
+        max-width: 17rem;
 
-        .cards {
-            display: flex;
-            gap: 0.5rem;
-
-            .card {
-                position: relative;
-                width: 50px;
-                pointer-events: auto;
-            }
+        h2 {
+            font-size: 1.5rem;
+            margin: 0 0 0.5rem 0;
         }
 
-        .message {
-            li {
-                padding-left: 0.5rem;
-                text-transform: uppercase;
-
-                &::marker {
-                    content: "✅";
+        .cardchecker {
+            font-size: 1rem;
+    
+            .cards {
+                display: flex;
+                gap: 0.5rem;
+    
+                .card {
+                    position: relative;
+                    width: 50px;
+                    pointer-events: auto;
                 }
-
-                &.noset {
-                    &::marker {
-                        content: "❌";
+            }
+    
+            .message {
+                ul {
+                    padding-left: 0;
+    
+                    li {
+                        padding-left: 0.5rem;
+                        text-transform: uppercase;
+                        list-style-type:none;
                     }
-                
                 }
             }
+    
+            
         }
-
-        
     }
+
+    
 
     .cardtable {
         display: grid;
