--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -53,12 +53,13 @@
         left: 50%;
         top: 0;
         transform: translateX(-50%);
-        background-color: #000;
+        background-color: rgba(0,0,0,0.8);
         color: #fff;
         font-size: 2rem;
         padding: 1rem;
-        border-radius: 0 0 0.5rem 0.5rem;
+        border-radius: 0.5rem;
         display: none;
+        z-index: 10;
 
         // When set to .show, warning will flash visible then disappear
         &.show {
