--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -131,7 +131,8 @@
         grid-template-areas: 
             "drawarea playarea"
             "playerarea playerarea";
-        gap: 1rem;
+        column-gap: 1rem;
+        row-gap: 4rem;
         transform-origin: center bottom;
         transform: rotateX(35deg);
         transform-style: preserve-3d;
