--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -1,4 +1,8 @@
 
+:root {
+    --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 * {
     box-sizing: border-box;
 }
@@ -33,7 +37,7 @@
         padding: 0.5rem 1rem;
         font-size: 2em;
         transition: 0.2s all ease-in-out;
-        font-family: 'Rubik', sans-serif;
+        font-family: var(--system-ui);
 
         &:hover {
             background-color: #e0401c;
