--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -300,6 +300,7 @@ details.debug {
         width: 100%;
         height: 100%;
         backface-visibility: hidden;
+        transform-style: preserve-3d;
         border: 0.5px solid transparent;
         border-color: rgb(255,255,255,0.5) rgba(0,0,0,0.5) ;
 
