Game over dialog

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -375,7 +375,7 @@ details.debug {
 
 }
 
-dialog.settings {
+dialog {
     background-color: $darkpurple;
     border-radius: 0.5rem;
     color: #fff;
